# haskell-static-site-generator

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  haskell-static-site-generator.cabal  mind-garden.cabal
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: test.yml
app/: Main.hs  template-notes.html  template-static.html  template.html
src/: ParseMd.hs
src/SiteGenerator/: Core.hs
static/: index.html  typebase.css
test/: Main.hs  MarkdownTests.hs  Spec.hs  TestMain.hs
