cabal-version:   3.4
name:            haskell-static-site-generator
version:         0.1.0.0
homepage:        https://jkbc.io/
license:         MIT
license-file:    LICENSE
author:          jakub-c
maintainer:      
category:        Web
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable haskell-static-site-generator
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base >= 4.7 && < 5,
        directory,
        filepath,
        parsec
    hs-source-dirs:   app, src
    default-language: GHC2021

library
  hs-source-dirs:      src
  exposed-modules:     ParseMd
  build-depends:       base >=4.7 && <5,
                       parsec
  default-language:    Haskell2010

test-suite your-project-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       MarkdownTests
  build-depends:       base >=4.7 && <5,
                       haskell-static-site-generator,
                       HUnit,
                       parsec
  default-language:    Haskell2010
