cabal-version:   3.4
name:            mind-garden
version:         0.1.0.0
homepage:        https://jkbc.io/
license:         MIT
license-file:    LICENSE
author:          jakub-c
maintainer:      
category:        Web
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

common optimizations
    ghc-options: -O2 -optl-s -optc-Os

library
    import:           warnings
    exposed-modules:  SiteGenerator.Core
    build-depends:
        base >= 4.7 && < 5,
        directory,
        containers,
        filepath,
        cmark,
        text
    hs-source-dirs:   src
    default-language: GHC2021

executable mind-garden
    import:           warnings, optimizations
    main-is:          Main.hs
    build-depends:
        base >= 4.7 && < 5,
        mind-garden,
        directory,
        containers,
        filepath,
        cmark,
        text
    hs-source-dirs:   app
    default-language: GHC2021

test-suite tests
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          TestMain.hs
    build-depends:
        base >= 4.7 && < 5,
        mind-garden,
        tasty,
        tasty-quickcheck,
        tasty-hunit,
        text
    hs-source-dirs:   test
    default-language: GHC2021
